--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       <dialog id="winDialog">YOU WIN! <button onclick="replay()" class="buttonPlayAgain">Play Again</button></dialog>
     </div>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
