--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
       <div id="missiles"></div>
       <div id="enemies"></div>
       <div id="enemyMissiles"></div>
+      <article class="content">
+        
+        <P>Use The <code>Left</code> and <code>Right</code> Arrows  keys to move And<code>Spacebar</code> to shooot </P>
+    </article>
       <dialog id="myDialog">GAME OVER! <button onclick="replay()" class="buttonPlayAgain">Play Again</button></dialog>
 
       <dialog id="winDialog">YOU WIN! <button onclick="replay()" class="buttonPlayAgain">Play Again</button></dialog>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
