--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div id="enemyMissiles"></div>
       <article class="content">
         
-        <P>Use The <code>Left</code> and <code>Right</code> Arrows  keys to move And<code>Spacebar</code> to shooot </P>
+        <P>Use The <code>Left</code> and <code>Right</code> Arrows  keys to move And <code>Spacebar</code> to shoot </P>
     </article>
       <dialog id="myDialog">GAME OVER! <button onclick="replay()" class="buttonPlayAgain">Play Again</button></dialog>
 
